<resources>
    <string name="app_name">IType</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="descript_logo">logo</string>
    <string name="tiempo">Tiempo : </string>
    <string name="Puntaje">Puntaje : </string>
    <string name="start">Comenzar!</string>
    <string name="sig">Siguiente</string>
    <string name="usuario_prueba_texto">Ingrese el usuario</string>
    <string name="contra_prueba_texto">1234</string>
    <string name="ingresar">Ingresar</string>
    <string name="User2">Usuario : </string>
    <string name="registrar">Registrarse</string>
    <string name="texto_bienvenida">¡Bienvenido a IType!</string>
    <string name="texto_registro">Ingrese un nuevo usuario y contraseña para poder acceder a la aplicación</string>
    <string name="texto_regresoinicio">Volver</string>
    <string name="iniciar_juego">Iniciar juego</string>
    <string name="Sig">Siguiente</string>
    <string name="vel">Score</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="texto_estad">Estadísticas</string>
    <string name="texto_salir_menup">Salir</string>
    <string name="titulo_sel_nivel">Seleccione la dificultad del juego:</string>
    <string name="texto_facil">Fácil</string>
    <string name="VelProm">Velocidad Promedio : </string>
    <string name="VelMax">Velocidad Maxima : </string>
    <string name="Volver">Volver a jugar</string>
    <string name="texto_medio">Medio</string>
...
